bat.bool1.monkeytrouble.MonkeyTrouble.scala.code
def monkeyTrouble(aSmile:Boolean, bSmile:Boolean): Boolean = {
  if(aSmile){
    if(bSmile){
      return true
    }
    return false
  }
  if(!aSmile){
    if(!bSmile){
      return true
    }
    return false
  }
}